added content in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div class="header"><h1>Hello World</h1></div>
+    <div class="content">
+      <p>This is a sample paragraph to demonstrate CSS styling.</p>
+    </div>
   </body>
 </html>
